--- a/templates/free/free_list.html
+++ b/templates/free/free_list.html
@@ -39,7 +39,10 @@
         {% for free in free_fixed %}
         <tr class="table-secondary text-center" style="font-weight: bold; cursor:pointer;" onclick="location.href='/free/{{ free.id }}/'" style="background-color:blue">
                     <td>{{ free.id }}</td>
-                    <td class="text-left" style="width:50%"><a id="free-{{ free.email }}">&nbsp;&nbsp;&nbsp;{{ free.title|truncatechars:30 }}</a></td>
+                    <td class="text-left" style="width:50%"><a id="free-{{ free.email }}">&nbsp;&nbsp;&nbsp;{{ free.title|truncatechars:30 }}</a>                 {% if free.comments %}
+                <span>[{{ free.comments }}]</span>
+                {% endif %}</td>
+
                     <td>{{ free.writer.username }}</td>
                     <td>{{ free.registered_date|date:'Y. m. d' }}</td>
                     <td>{{ free.hits }}</td>
@@ -51,9 +54,17 @@
         {% for free in free_list %}
         <tr class="text-center" style="cursor:pointer;" onclick="location.href='/free/{{ free.id }}/'">
             <td> {{ free.id }}</td>
-            <td>{{ free.title|truncatechars:30 }}</td>
+            <td>{{ free.title|truncatechars:30 }}
+                 {% if free.comments %}
+                <span>[{{ free.comments }}]</span>
+                {% endif %}
+            </td>
             <td>{{ free.writer.username }}</td>
-            <td>{{ free.registered_date|date:'Y. m. d' }}</td>
+            {% if free.created_string == False %}
+            <td>{{ free.registered_date|date:'m월 d일' }}</td>
+            {% else %}
+            <td>{{ free.created_string }}</td>
+            {% endif %}
             <td>{{ free.hits }}</td>
         </tr>
         {% endfor %}
