--- a/static/assets/css/cal/styles.css
+++ b/static/assets/css/cal/styles.css
@@ -34,5 +34,24 @@ ul {
 }
 
 a {
-  color: #17a2b8;
+  color: #08298A;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.btn {
+  outline: none;
+  color: black;
+  background-color: transparent;
+  box-shadow: 0 0 0 0;
+}
+
+.clearfix {
+  margin: 15px;
 }
