--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -53,7 +53,7 @@
         <ul class="nav-menu">
           <li class="menu"><a href="{% url 'users:index'%}">Home</a></li>
           <li><a href="{% url 'free:list'%}">게시판</a></li>
-          <li><a href="">일정</a></li>
+          <li><a href="{% url 'cal:calendar'%}">일정</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
