--- a/templates/cal/calendar.html
+++ b/templates/cal/calendar.html
@@ -44,7 +44,7 @@
 <div >
 	<a class="btn btn-info left" href="{'% url 'cal:calendar' %}?{{ prev_month }}"> Previous Month </a>
 	<a class="btn btn-info right" href="{'% url 'cal:calendar' %}?{{ next_month }}"> Next Month </a>
-    <a class="btn btn-info right" href="{% url 'cal:new' %}"> New Event </a>
+    <a class="btn btn-info right" href="{% url 'cal:new' %}"> 일정 추가하기 </a>
 </div>
 {{ calendar }}
 
