--- a/templates/cal/event_detail.html
+++ b/templates/cal/event_detail.html
@@ -18,17 +18,18 @@
 {{ form }}
 
 
-<div class="container">
+<div class="container" style="height:760px">
     {% if events %}
     <form action="" method="post">
         {% csrf_token %}
-        <table class="table table-borderless">
+        <table class="table table-borderless ">
             <thead>
                 <tr>
                     <th scope="col"></th>
                     <th scope="col">set</th>
                     <th scope="col">Weight</th>
                     <th scope="col">Reps</th>
+                    <th scope="col">Rest</th>
                     <th scope="col">check</th>
                 </tr>
             </thead>
@@ -37,8 +38,9 @@
                 <tr>
                     <td scope="col">{{ event.title }}</td>
                     <td scope="col">{{ event.work_set|default:0 }}</td>
-                    <td scope="col">3</td>
+                    <td scope="col">{{ event.work_weight|default:0}}</td>
                     <td scope="col">{{ event.repeat_count| default:0 }}</td>
+                    <td scope="col">{{ event.break_time| default:0 }}</td>
                     {%if event.workout_done == True %}
                     <td scope="col">
                         <input  class="checked" name="checked" type="checkbox" value="{{ event.id }}" checked>
@@ -56,12 +58,12 @@
         <div class="container">
         <input type="hidden" name="checklist" id="check_list" value="">
         <input type="hidden" name="unchecklist" id="uncheck_list" value="">
-        <button type="submit" class="btn btn-primary" onclick="getlist()">확인</button>
+        <button type="submit" class="btn btn-primary pull-right" onclick="getlist()">확인</button>
         {% else%}
          <div style="height:760px">
 
              <h1 style="align:center"> 운동 일정을 추가해 주세요!</h1>
-
+             <a class="btn btn-info right" href="{% url 'cal:new' %}"> 일정 추가하기 </a>
          </div>
 
         {% endif %}
